[package]
name = "uscis"
version = "0.1.0"
authors = ["Ben Zhang <benzh@cs.berkeley.edu>"]

[dependencies]
reqwest = "0.8.6"
scraper = "0.7"
rayon = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
csv = "1"
log = "0.4"
env_logger = "0.5.12"
serde_json = "1.0"
