[package]
name = "lambda"
version = "0.1.0"
authors = ["Ben Zhang <benzh@cs.berkeley.edu>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "lambda"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
uscis = { path = "../.." }